feat: 응답디티오 필드 추가(경도, 위도, 댓글 카운트), 좋아요 중복 입력 방지